--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -198,25 +198,25 @@
 
     li {
       display: inline-block;
-      border: 1px solid #c9c9c9;
+      border: 1px solid rgba(#333,0.3);
       border-radius: 4px;
       margin-right: 3px;
       margin-bottom: 7px;
       transition: 200ms border-color;
 
       a {
-        color: #aaaab2;
+        opacity: 0.7;
         text-decoration: none;
         display: block;
         padding: 4px 10px;
-        transition: 200ms color;
+        transition: 200ms opacity;
       }
 
       &:hover {
-        border-color: #555;
+        border-color: #333;
         
         a {
-          color: #333;
+          opacity: 1;
         }
       }
     }
